--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
+  height: 100vh;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  /* background-color: bisque; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#parent {
+  margin-top: 50px;
+  height: 50vh;
+  width: 700px;
+  /* background-color: aquamarine; */
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#parent .hostelSelection {
+  height: 200px;
+  width: 300px;
+  /* background-color: blue; */
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  /* color: white; */
 }
 
-.App-link {
-  color: #61dafb;
+.hostelSelection img{
+  height: 100px;
+  width: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#parent #girlSection {
+  background-color: #0cbfcf;
+}
+
+#parent #boySection {
+  background-color: #FFBF86;
 }
